<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/about_title">
        <PreferenceScreen
            android:id="@+id/action_home"
            android:layout_width="match_parent"
            android:key="about_screen"
            android:summary="@string/sum_about_app"
            android:title="@string/about_us">
            <Preference
                android:key="@string/about_app_version"
                android:persistent="false"
                android:summary="@string/about_app_version_sum"
                android:title="@string/about_app_version">
            </Preference>
        </PreferenceScreen>
    </PreferenceCategory>
    <Preference
        android:key="@string/developer_info"
        android:title="@string/developer_info"
        android:summary="@string/developer_info_sum"
        android:persistent="false">
    </Preference>
    <Preference
        android:key="app_info"
        android:title="@string/app_info_drop_target_label"
        android:persistent="false">
        <intent
            android:action="android.settings.APPLICATION_DETAILS_SETTINGS"
            android:data="package:com.iamshaikjaleel.SJAPP" />
    </Preference>
</PreferenceScreen>