<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="App Details" >
    <Preference
        android:key="@string/about_app_version"
        android:icon="@drawable/ic_label"
        android:persistent="false"
        android:summary="@string/about_app_version_sum"
        android:title="@string/about_app_version"/>

    <Preference
        android:key="app_info"
        android:icon="@drawable/ic_info"
        android:summary="@string/app_info_sum"
        android:title="@string/app_info_drop_target_label"
        android:persistent="false">
        <intent
            android:action="android.settings.APPLICATION_DETAILS_SETTINGS"
            android:data="package:com.iamshaikjaleel.SJAPP" />
    </Preference>
    </PreferenceCategory>
</PreferenceScreen>
